feat(media): mirror object storage writes